@@ -1,4 +1,5 @@
 require File.expand_path(File.dirname(__FILE__) + '/helper')
+require 'i18n'
 
 class TestRendering < Test::Unit::TestCase
   def teardown
