@@ -16,6 +16,7 @@ begin
     gem.rubyforge_project = 'padrino-gen'
     gem.version = Padrino.version
     gem.add_runtime_dependency     "padrino-core",  "= #{Padrino.version}"
+    gem.add_runtime_dependency     "bundler",       ">= 0.9.7"
     gem.add_development_dependency "haml",          ">= 2.2.1"
     gem.add_development_dependency "shoulda",       ">= 2.10.3"
     gem.add_development_dependency "mocha",         ">= 0.9.7"
